--- a/Index.html
+++ b/Index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Daily Task Reporting Form</title>
+    <title>Daily Tasker - Team Task Management</title>
     <style>
         * {
             margin: 0;
@@ -347,8 +347,8 @@
 <body>
     <div class="container">
         <div class="header">
-            <h1>Daily Task Report</h1>
-            <p>Submit your daily work progress and project updates</p>
+            <h1>Daily Tasker</h1>
+            <p>Team Task Management & Progress Tracking</p>
         </div>
         
         <div class="tab-container">
