--- a/index.html
+++ b/index.html
@@ -1059,6 +1059,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="Refresh" content="0; url=Daily_Tasker.html" />
+    <title>Redirecting…</title>
+    
     <title>Daily Tasker - Team Task Management (GitHub Sync)</title>
     <style>
         * {
