--- a/index.html
+++ b/index.html
@@ -1057,12 +1057,8 @@
     </script><!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="Refresh" content="0; url=Daily_Tasker.html" />
-    
-    
-    <title>Daily Tasker - Team Task Management (GitHub Sync)</title>
+    <title>Redirecting…</title>
     <style>
         * {
             margin: 0;
